force-app/main/default/objects/CCXR_Items__c/CCXR_Items__c.object-meta.xml
<CustomObject>
    <label>CCXR_Items</label>
    <nameField>
        <displayFormat>ITEM-{0000}</displayFormat>
        <label>CCXR_Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCXR_Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>