force-app/main/default/objects/CCXR_Items__c/fields/CCXR_Description__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Description__c</fullName>
    <label>CCXR_Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>