force-app/main/default/objects/CCXR_Items__c/fields/CCXR_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Item_Category__c</fullName>
    <label>CCXR_Item_Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Non-Vegetarian</fullName>
            </value>
            <value>
                <fullName>Beverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>