force-app/main/default/objects/CCXR_Items__c/fields/CCXR_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Item_Name__c</fullName>
    <label>CCXR_Item Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>