force-app/main/default/objects/CCXR_Items__c/fields/CCXR_Item_Prep_Time__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Item_Prep_Time__c</fullName>
    <label>CCXR_Item_Prep_Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 Min</fullName>
                <default>true</default>
                <label>10 Min</label>
            </value>
            <value>
                <fullName>15 Min</fullName>
            </value>
            <value>
                <fullName>20 Min</fullName>
            </value>
            <value>
                <fullName>25 Min</fullName>
            </value>
            <value>
                <fullName>40 Min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>