force-app/main/default/objects/CCXR_Items__c/fields/CCXR_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Item_Status__c</fullName>
    <label>CCXR_Item_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Out of Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>