force-app/main/default/objects/CCXR_Items__c/fields/CCXR_Item_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Item_SubCategory__c</fullName>
    <label>CCXR_Item_SubCategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCXR_Item_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Starters</fullName>
            </value>
            <value>
                <fullName>Soups</fullName>
            </value>
            <value>
                <fullName>Rice</fullName>
            </value>
            <value>
                <fullName>Curries</fullName>
            </value>
            <value>
                <fullName>Roti</fullName>
            </value>
            <value>
                <fullName>Desserts</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Milkshakes</fullName>
            </value>
            <value>
                <fullName>Ice Creams</fullName>
            </value>
            <value>
                <fullName>Sweets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>