force-app/main/default/objects/CCXR_Items__c/fields/CCXR_Price__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Price__c</fullName>
    <label>CCXR_Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>