force-app/main/default/objects/CCXR_Items__c/fields/CCXR_Serves__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Serves__c</fullName>
    <label>CCXR_Serves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>