force-app/main/default/objects/CCXR_Items__c/fields/CCXR_Special_Item__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Special_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCXR_Special Item</label>
    <type>Checkbox</type>
</CustomField>