force-app/main/default/objects/CCXR_Items__c/fields/Item_Image__c.field-meta.xml
<CustomField>
    <fullName>Item_Image__c</fullName>
    <formula>IMAGE( Item_Image_Link__c , &quot; &quot; , 150, 200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Image</label>
    <type>Text</type>
</CustomField>