force-app/main/default/objects/CCXR_Items__c/fields/Item_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Item_Image_Link__c</fullName>
    <label>Item Image Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>