force-app/main/default/objects/CCXR_Items__c/validationRules/Item_Name_Should_Start_with_Uppecase.validationRule-meta.xml
<ValidationRule>
    <fullName>Item_Name_Should_Start_with_Uppecase</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(CCXR_Item_Name__c )),
    NOT(REGEX(CCXR_Item_Name__c , &quot;[A-Z][a-z]*|[A-Z][a-z]*&quot;)),
    NOT(CONTAINS(CCXR_Item_Name__c , &quot;__&quot;)),
    NOT(CONTAINS(CCXR_Item_Name__c , &quot; &quot;))
)</errorConditionFormula>
    <errorDisplayField>CCXR_Item_Name__c</errorDisplayField>
    <errorMessage>Item Name Start With Uppercase Letter</errorMessage>
</ValidationRule>