force-app/main/default/objects/CCXR_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCXR_Item_Name__c</columns>
    <columns>CCXR_Image__c</columns>
    <columns>CCXR_Item_Category__c</columns>
    <columns>CCXR_Item_SubCategory__c</columns>
    <columns>CCXR_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>